# test-langgraph-ai-agent

./: .env.dev.example  .env.example  .env.production.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
.spec-workflow/: session.json
.spec-workflow/specs/ai-agent/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  check_config.py  main.py  manage_db.py  pyproject.toml  quick_db_check.py  simple_test.py  test_api.py  view_db.py
backend/alembic/: env.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  base_agent.py  thinking_tracker.py  weather_agent.py
backend/app/agents/tools/: __init__.py  weather_tool.py
backend/app/api/: __init__.py  auth.py  chat.py  dependencies.py  stream.py
backend/app/core/: __init__.py  config.py  database.py  permissions.py  security.py  startup.py
backend/app/models/: __init__.py  chat.py  thinking_step.py  user.py
backend/app/repositories/: __init__.py  base_repository.py  chat_repository.py  factory.py  user_repository.py
backend/app/schemas/: chat.py
backend/app/services/: auth_service.py  chat_service.py  stream_service.py
backend/tests/: README.md  conftest.py
backend/tests/test_auth/: __init__.py  test_auth_api.py
backend/tests/test_chat/: __init__.py  test_chat_api.py
docs/: api.md  deployment.md
frontend/: Dockerfile  Dockerfile.dev  auto-imports.d.ts  components.d.ts  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AuthDebug.vue  AuthGuard.vue  InputArea.vue  MessageList.vue  SessionDetail.vue  SessionList.vue  StreamingMessage.vue  ThinkingDisplay.vue  ThinkingStep.vue  TypewriterText.vue
frontend/src/composables/: useNotification.ts  useSSE.test.ts  useSSE.ts
frontend/src/config/: env.ts
frontend/src/router/: index.ts
frontend/src/services/: api.test.ts  api.ts  stream.ts
frontend/src/stores/: auth.ts  chat.ts
frontend/src/tests/: setup.ts  utils.ts
frontend/src/types/: api.ts  auth.ts  chat.ts
frontend/src/utils/: errorHandler.test.ts  errorHandler.ts
frontend/src/views/: History.vue  HomeView.vue  NotFoundView.vue  TestCss.vue
tests/: README.md
tests/docker/: docker-compose.test.yml
tests/e2e/: Dockerfile.e2e  package.json  playwright.config.ts
tests/integration/: conftest.py  test_auth_flow.py  test_chat_flow.py
(+15 files in other folders)
